# mlocate

./: .gitignore  .hgignore  ChangeLog  HACKING  Makefile.am  NEWS  README  configure.ac
.tx/: config
doc/: locate.1.in  mlocate.db.5  updatedb.8.in  updatedb.conf.5.in
gnulib/lib/: stat-time.h
gnulib/m4/: gnulib-cache.m4
po/: LINGUAS  Makevars  POTFILES.in  ar.po  as.po  ast.po  bg.po  bs.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  et.po  fa.po  fi.po  fr.po  gu.po  hu.po  it.po  ja.po  ko.po  lv.po  mlocate.pot  ms.po  nds.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sr.po  sr@latin.po  sv.po  ta.po  tr.po  uk.po  zh_CN.po  (+1 more)
src/: bind-mount.c  bind-mount.h  conf.c  conf.h  db.h  lib.c  lib.h  locate.c  updatedb.c
systemd/: updatedb.service
tests/: bind-mount-helper.c  bind-mount.at  config.at  locate.at  testsuite.at  updatedb.at
